[package]
name = "dumpx"
version = "0.0.2"
edition = "2024"
description = "Fast and minimal command line tool to dump any file as hex"
license = "MIT"
keywords = ["hex", "ascii", "dump", "file", "tool"]
repository = "https://github.com/cainthebest/dumpx"
categories = ["command-line-interface"]

[profile.release]
lto = true
strip = true
rpath = true
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
