[package]
name = "dumpx"
license = "MIT"
edition = "2024"
version = "0.0.5"
readme = "README.md"
categories = ["command-line-interface"]
repository = "https://github.com/cainthebest/dumpx"
keywords = ["hex", "ascii", "dump", "file", "tool"]
description = "Simple and minimal command line tool to hexdump any file"


[profile.release]
lto = true
strip = true
rpath = true
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
